# OpenDiag

./: .gitignore  CMakeLists.txt  README.md  about.c  about.h  configuration.c  configuration.h  dummy_callbacks.c  dummy_callbacks.h  globals.h  init_file.c  init_file.h  logfile.c  logfile.h  main_dialog.c  main_dialog.h  ptdiag.c  ptdiag.rc  resource.h  utils.c  utils.h
